--- a/report/report.bib
+++ b/report/report.bib
@@ -11770,3 +11770,39 @@ thus establishing optimal rates of linear, convex and model selection type aggre
 	author = {Gal, Yarin},
 	year = {2016}
 }
+
+@misc{noauthor_gal_nodate,
+	title = {Gal {Chechik}:  {NIPS} 1-17 data},
+	url = {http://ai.stanford.edu/~gal/data.html},
+	urldate = {2018-04-21},
+	file = {Gal Chechik\: Download data:/home/jeremiah/Zotero/storage/I83HYD5U/data.html:text/html}
+}
+
+@misc{synced_tree_2017,
+	title = {Tree {Boosting} {With} {XGBoost} — {Why} {Does} {XGBoost} {Win} “{Every}” {Machine} {Learning} {Competition}?},
+	url = {https://medium.com/@Synced/tree-boosting-with-xgboost-why-does-xgboost-win-every-machine-learning-competition-ca8034c0b283},
+	abstract = {Introduction},
+	urldate = {2018-04-25},
+	journal = {Medium},
+	author = {Synced},
+	month = oct,
+	year = {2017},
+	file = {Snapshot:/home/jeremiah/Zotero/storage/M7L4L5HV/tree-boosting-with-xgboost-why-does-xgboost-win-every-machine-learning-competition-ca8034c0b283.html:text/html}
+}
+
+@article{chen_xgboost:_2016,
+	title = {{XGBoost}: {A} {Scalable} {Tree} {Boosting} {System}},
+	shorttitle = {{XGBoost}},
+	url = {http://arxiv.org/abs/1603.02754},
+	doi = {10.1145/2939672.2939785},
+	abstract = {Tree boosting is a highly effective and widely used machine learning method. In this paper, we describe a scalable end-to-end tree boosting system called XGBoost, which is used widely by data scientists to achieve state-of-the-art results on many machine learning challenges. We propose a novel sparsity-aware algorithm for sparse data and weighted quantile sketch for approximate tree learning. More importantly, we provide insights on cache access patterns, data compression and sharding to build a scalable tree boosting system. By combining these insights, XGBoost scales beyond billions of examples using far fewer resources than existing systems.},
+	urldate = {2018-04-25},
+	journal = {arXiv:1603.02754 [cs]},
+	author = {Chen, Tianqi and Guestrin, Carlos},
+	year = {2016},
+	note = {arXiv: 1603.02754},
+	keywords = {Computer Science - Learning},
+	pages = {785--794},
+	annote = {Comment: KDD'16 changed all figures to type1},
+	file = {arXiv\:1603.02754 PDF:/home/jeremiah/Zotero/storage/VG76UV58/Chen and Guestrin - 2016 - XGBoost A Scalable Tree Boosting System.pdf:application/pdf;arXiv.org Snapshot:/home/jeremiah/Zotero/storage/8SLL7RYY/1603.html:text/html}
+}
